# LocalTagPlayer

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_SIGNING_POLICY.md  CURRENT_TASK.md  LICENSE  NEW_CHAT_BOOTSTRAP.md  PROJECT.md  README.md  README_INSTALL.md  ROADMAP.md  SKILLS_SUMMARY.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
.agents/skills/: context_policy.md  prompt_template.md
.agents/skills/ltp-apple-ui-design/: LICENSE  SKILL.md
.agents/skills/ltp-cache-diagnostics/: SKILL.md
.agents/skills/ltp-log-triage/: SKILL.md
.agents/skills/ltp-media-library-tag-ui/: SKILL.md
.agents/skills/ltp-player-filter-queue/: SKILL.md
.agents/skills/ltp-session-handoff/: SKILL.md
.agents/skills/ltp-small-fix/: SKILL.md
.agents/skills/ltp-stable-identity-missing-relink/: SKILL.md
.agents/skills/ltp-tag-filter-data/: SKILL.md
.agents/skills/ltp-tag-manager-batch-tagging/: SKILL.md
.agents/skills/ltp-task-router/: SKILL.md
.github/workflows/: desktop-cross-platform.yml  release-packages.yml
docs/: NEW_CHAT_BOOTSTRAP.md  RELEASE_NOTES_0.2.0.md  agent_eval.md  agent_harness.md  media_kit_2_windows_experiment_20260724.md
docs/chat_tasks/: CHAT_1_ARCHITECTURE.md  CHAT_2_MEDIA_LIBRARY.md  CHAT_3_MEDIA_LIBRARY_TAG_UI.md  CHAT_4_PLAYER.md  CHAT_5_THUMBNAIL_DIAGNOSTICS.md  CHAT_6_TAG_MANAGER.md  CHAT_7_MAIN_UI_SMOKE_2026_07_08.md  CHAT_7_RESPONSIVE_UI.md
docs/design/: APPLE_UI_MIGRATION.md
docs/qa/: library_add_remove_player_stress_20260714.md  library_scan_playback_coordination_20260715.md  main_window_latency_smoke.md  main_window_semantic_stress_gate.md  player_gpu_capability_matrix_20260722.md  player_hdr_sdr_baseline_20260722.md  player_quality_baseline_20260722.md  windows_hardware_decode_matrix.md
docs/task_history/: CURRENT_TASK_HISTORY_THROUGH_2026-07-19.md
evals/agent/: capability_cases.json  regression_cases.json  trigger_cases.json
evals/agent/rubrics/: apple_ui.json
evals/agent/schemas/: agent_result.schema.json  judge_result.schema.json
integration_test/: gpu_capability_matrix_test.dart  hdr_mapping_settings_test.dart  library_add_remove_player_stress_test.dart  library_scan_during_playback_test.dart  library_scan_frame_diagnostics_test.dart  native_media_probe_test.dart  native_player_bridge_test.dart  player_fixed_quality_baseline_test.dart  player_queue_screenshot_test.dart  player_real_library_stress_test.dart
lib/: main.dart
lib/src/: app.dart
lib/src/composition/: local_tag_player_dependencies.dart
lib/src/core/: app_paths.dart  data_backup_settings.dart  layout_size.dart  platform_interfaces.dart  playback_settings.dart  tag_rules.dart
lib/src/models/: app_release.dart  data_backup_models.dart  external_media_tools_state.dart  library_scan_models.dart  library_sort.dart  media_details.dart  platform_models.dart  player_gpu_capabilities.dart  video_item.dart
lib/src/pages/: library_page.dart  library_page_helpers.dart  missing_relink_page.dart  player_context_panel.dart  player_delete_dialog.dart  player_diagnostics_dialog.dart  player_dialog_content.dart  player_hardware_decode_warning_dialog.dart  player_open_failure_panel.dart  player_open_request_controller.dart  player_page.dart  player_playback_controller.dart  player_playback_mode.dart  player_queue_sidebar.dart  player_resume_dialog.dart  tag_manager_page.dart
lib/src/platform/: database_provider.dart  desktop_file_location_service.dart  desktop_file_system_adapter.dart  file_system_adapter.dart  platform_interfaces.dart
lib/src/repositories/: repository_interfaces.dart
lib/src/services/: bulk_path_relink_service.dart  desktop_window_state_service.dart  external_media_tools.dart  library_card_ui_diagnostics.dart  library_count_refresh_coordinator.dart  library_load_diagnostics.dart  library_metadata_persistence.dart  library_scan_backend.dart  library_scan_coordinator.dart  library_scan_service.dart  library_scan_ui_diagnostics.dart  library_store.dart  library_stress_control.dart  library_tag_maintenance.dart  library_tag_persistence.dart  (+11 more)
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: Info.plist
macos/Runner.xcodeproj/: project.pbxproj
packaging/: README.md
packaging/macos/: package_notarized.sh
packaging/windows/: local_tag_player.iss  sign_release.ps1
scripts/qa/: main_window_stress_semantic.mjs
test/: agent_eval_tool_test.py  app_theme_tokens_test.dart  app_update_test.dart  architecture_contract_test.dart  desktop_file_system_adapter_test.dart  library_card_file_menu_test.dart  library_load_benchmark_test.dart  library_rename_refresh_test.dart  library_scan_benchmark_test.dart  library_scan_playback_gate_test.dart  library_scan_progress_test.dart  library_scan_reuse_test.dart  library_search_filter_status_test.dart  library_store_test.dart  media_probe_backend_test.dart  player_rename_playback_smoke_test.dart  widget_test.dart
test_driver/: integration_test.dart
tool/: agent_eval.py  benchmark_thumbnail_gpu_paths.ps1  check_release_branch_integration.ps1  generate_player_quality_samples.ps1  manage_stress_artifacts.ps1  run_fixed_quality_baseline.ps1  run_gpu_capability_matrix.ps1  run_hdr_mapping_visual_qa.ps1  run_library_add_remove_player_stress.ps1  run_player_queue_visual_qa.ps1  run_player_real_library_stress.ps1  summarize_library_add_remove_stress.ps1  summarize_player_stress_metrics.ps1
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/native_player/: CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
windows/runner/: CMakeLists.txt  NATIVE_PLAYER.md  Runner.rc  flutter_window.cpp  flutter_window.h  gpu_capability_probe.cpp  gpu_capability_probe.h  gpu_compute_frame_budget.cpp  gpu_compute_frame_budget.h  main.cpp  native_media_probe_bridge.cpp  native_media_probe_bridge.h  native_player_bridge.cpp  native_player_bridge.h
windows/rust_library_scan/: Cargo.toml  LICENSE  README.md
(+55 files in other folders)
